2007-01-30  Martin Hunt  <hunt@redhat.com>

	* alloc.c (_stp_alloc_percpu):  Don't implement
	our own; just call __alloc_percpu with appropriate args
	for the OS version.
	(_stp_free_percpu): Delete.
	* map.c (_stp_map_init): When calling kmalloc_node, first 
	call cpu_to_node() to get the proper node number.
	* stat.c (_stp_stat_del): Call free_percpu()
	instead of _stp_free_percpu().
	
2007-01-29  Martin Hunt  <hunt@redhat.com>

	* alloc.c (_stp_kmalloc): New function. Call kmalloc
	with the correct flags and track usage.
	(_stp_kzalloc): Ditto.
	* map.c: Use new alloc calls.
	* print.c: Ditto.
	* stat.c: Ditto.
	* time.c: Ditto.

2007-01-25  Roland McGrath  <roland@redhat.com>

	* loc2c-runtime.h (store_deref): Use "Zr" constraint for 64-bit case.

2007-01-22  Josh Stone  <joshua.i.stone@intel.com>

	* loc2c-runtime.h (kread, kwrite): Tweaks to work better with
	reading and writing pointer values.

2007-01-22  Martin Hunt  <hunt@redhat.com>

	* map-gen.c (_stp_map_exists): New. Check for membership only.

2007-01-19  Josh Stone  <joshua.i.stone@intel.com>

	PR 3079
	* loc2c-runtime.h (kread, kwrite): New macros to safely read/write
	values from kernel pointers.  This includes a workaround for 64-bit
	numbers on i386 platforms.

2007-01-10  Martin Hunt  <hunt@redhat.com>
	PR 3708
	* map.c (str_copy): Check for NULL pointers.
	(_new_map_set_int64): Don't check val for 0.
	(_new_map_set_str): Don't check val for NULL.

	* map-gen.c (VAL_IS_ZERO): Removed.
	(_stp_map_del): New.
	(__stp_map_set): Don't check for zero.

	* pmap-gen.c (VAL_IS_ZERO): Removed.
	(_stp_pmap_del): New.
	(__stp_pmap_set): Don't check for zero.

2006-12-20  Martin Hunt  <hunt@redhat.com>

	* runtime.h: Include mm.h.

2006-12-20  Li Guanglei <guanglei@cn.ibm.com>
	* runtime/lket/b2a/lket_b2a.c: bugfix for NULL appname when
	search appNameTree.

2006-12-18  David Smith  <dsmith@redhat.com>

	* lket/b2a/Makefile.in: Regenerated.  This needed to be done since